[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/StateManager/StateManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Entities/Boxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/resources/Theme.tres" type="Theme" id=4]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="DEBUG_TEXT" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -40.0
margin_right = 29.0
margin_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
text = "DEBUG"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="MessagePos" type="Position2D" parent="."]
position = Vector2( 0, -20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 4

[node name="Senses" type="Node2D" parent="."]

[node name="StateManager" parent="." instance=ExtResource( 1 )]

[node name="Idle" type="Node2D" parent="StateManager"]

[node name="Hit" type="Node2D" parent="StateManager"]

[node name="Die" type="Node2D" parent="StateManager"]

[editable path="HurtBox"]
